# ctypes_of_clang

./: .gitignore  .merlin  .ocamlinit  Makefile  README.md  _ocamlinit  _tags  ctypes-of-clang.opam  dune  dune-project  jbuild  myocamlbuild.ml
examples/date/: date.ml  date_stubgen.ml  libodate.clib  test_date.ml
examples/date/api/: date.ml  dune  jbuild
examples/date/stubgen/: dune  jbuild  stubgen.ml
examples/date/stubs/: dune  jbuild
examples/date/test/: dune  jbuild  test_date.ml
examples/foo/: README.md  cfoo.c  foo.h  foo.ml  foo_stubgen.ml  libofoo.clib  test_foo.ml
examples/foo/api/: dune  foo.ml  jbuild
examples/foo/clib/: dune  foo.h  jbuild
examples/foo/stubgen/: dune  jbuild  stubgen.ml
examples/foo/stubs/: dune  jbuild
examples/foo/test/: dune  jbuild  test_foo.ml
examples/ncurses/: liboncurses.clib  ncurses.ml  ncurses_stubgen.ml  test_ncurses.ml
examples/ncurses/api/: dune  jbuild  ncurses.ml
examples/ncurses/stubgen/: dune  jbuild  stubgen.ml
examples/ncurses/stubs/: dune  jbuild
examples/ncurses/test/: dune  jbuild  test_ncurses.ml
lib/: README.md
src/: cgen.ml  clang.ml  clang.mli  coc_clang.ml  coc_clang.mli  coc_enums.ml  coc_enums.mli  coc_extract.ml  coc_extract.mli  coc_gen.ml  coc_gen.mli  coc_gen2.ml  coc_ident.ml  coc_info.ml  coc_info.mli  coc_parse.ml  coc_parse.mli  coc_parse2.ml  coc_runtime.ml  coc_runtime.mli  coc_typing.ml  coc_typing.mli  cparse.ml  cparse.mli  ctypes_of_clang.mllib  ctyping.ml  ctyping.mli  dune  enums.ml  extract.ml  jbuild  parse.ml  parse.mli
test/: align.c  arr.c  bitfield.c  bool.c  enums.c  err.c  foo.h  globals.ml  globals1.h  globals2.h  ldouble.c  sizeof.c  struct1.c  struct2.c  struct3.c  struct4.h  structs.c  structs.h  structs.ml  test.c  testglobals.ml  unnamed.c
tools/: dump.ml  dumpx.ml  dune  extract.ml  gencstdlib.ml  genenums.ml  info.ml  jbuild  ppx_coc.ml
