(rule
 (deps
  (:< ../stubgen/stubgen.exe))
 (targets cstubs.c)
 (action
  (with-stdout-to
   %{targets}
   (run %{<} -c))))

(rule
 (deps
  (:< ../stubgen/stubgen.exe))
 (targets stubs.ml)
 (action
  (with-stdout-to
   %{targets}
   (run %{<} -ml))))

(library
 (name foostubs)
 (c_names cstubs)
 (libraries ctypes.stubs))
